added option to omit addresses from labels

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                   
+10:07 AM 11/13/2020	CL	Payee Labels - added an option to omit addresses from labels
 14:03 11/20/2020	CO	5.75074  
 10:35 11/20/2020	CO	5.75073  removed double Payment to from Bill 1945 
 14:01 11/20/2020	CO	5.75072    
