--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                       
+2:10 PM 1/5/2021	PR	Withholding tables updated for MO 2021
  9:16 12/20/2020	CO	5.75094  
 16:13 12/20/2020	CO	5.75093   
 4:13 PM 12/29/2020	PR	fixed rec bug in Print Payroll Checks  
