--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                        
+3:19 PM 1/8/2021	GL	Trial Balance Fixed Print Without Details
 15:50 01/21/2021	CO	5.75095  
 2:10 PM 1/5/2021	PR	Withholding tables updated for MO 2021 
 9:16 12/20/2020	CO	5.75094   
