added fnEmployeeData$ to contain IL W-4 info and any other random data fields we want connected to Employee Number.

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                              
+3:08 PM 1/19/2021	PR	Employee / Employee Department navigation overhauled
 10:58 01/21/2021	CO	5.75101  
 10:36 AM 1/13/2021	UB	Enhanced Last Billing Date read logic 
 10:41 01/21/2021	CO	5.75100   
