--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                              
+12:34 PM 1/21/2021	PR	IL Withholdings updated - Employees need to add IL W-4 info from line 1 and line 2 into their employee records
 3:08 PM 1/19/2021	PR	Employee / Employee Department navigation overhauled
 10:58 01/21/2021	CO	5.75101  
 10:36 AM 1/13/2021	UB	Enhanced Last Billing Date read logic 
