Added Customers to the Main Menu - searchable by account or name simply takes you into customer record to edit it also some clean up on converstion stuff for kathy bacon

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                
+2:41 PM 1/22/2021	UB	Added Customers to the Main Menu - searchable by account or name simply takes you into customer record to edit it
 14:02 01/21/2021	CO	5.75103  
 12:37 01/21/2021	CO	5.75102   
 12:34 PM 1/21/2021	PR	IL Withholdings updated - Employees need to add IL W-4 info from line 1 and line 2 into their employee records  
