fixed balanceSheet.br header

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                               
+11:19 AM 3/11/2021	GL	Balance Sheet - fixed a bug that caused the first header record of Fincial Statement Design to be ignored.  Also added that the report will always be labeled as Balance Sheet regardless
 6:51 PM 3/10/2021	GL	Transaction Journal - added Company Name to the top of the report
 11:39 03/21/2021	CO	5.75118  
 11:35 03/21/2021	CO	5.75117   
