Fixed a glitch that required you to save a Employee before you were able to add a department.  Now the Add Department button auto saves the employee entered

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                     
+2:59 PM 4/15/2021	PR	Fixed a glitch that required you to save a Employee before you were able to add a department.  Now the Add Department button auto saves the employee entered
 12:40 04/21/2021	CO	5.75124  
 12:39 PM 4/5/2021	UB	Customer - Fixed an error when changing account key 
 9:08 PM 3/27/2021	GL	Fixed Payee File was missing Add Edit buttons on Standard Breakdowns grid 
