Enter Transactions - FINALLY READY ...   I hope ;)

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                      
+11:46 AM 4/26/2021	GL	Enter Transactions overhauled.  Old version still available as Enter Transactions (Legacy)
 15:01 04/21/2021	CO	5.75125  
 2:59 PM 4/15/2021	PR	Fixed a glitch that required you to save a Employee before you were able to add a department.  Now the Add Department button auto saves the employee entered 
 12:40 04/21/2021	CO	5.75124   
