Billing Journal - added an option to print the Current Balance instead of Balance as of the billing date printing.  Also enhanced the heading to not show the word Current if not the current balance

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                         
+2:01 PM 5/11/2021	UB	Billing Journal - added an option to print the Current Balance instead of Balance as of the billing date printing.  Also enhanced the heading to not show the word Current if not the current balance
 18:09 05/21/2021	CO	5.75128  
 13:31 04/21/2021	CO	5.75127   
 8:32 AM 4/28/2021	CO	Keyboard Shortcuts now dynamically appear in tooltip texts for all buttons for Escape,Enter,PageUp,PageDown,F-Keys and Alt+Key combinations  
