Enter Transactions - fixed a bug that caused most types of transactions to be added into proof totals twice and some final stuff i forgot to commit on invoices

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                  
+1:44 PM 6/5/2021	GL	Enter Transactions - fixed a bug that caused most types of transactions to be added into proof totals twice
 13:50 05/21/2021	CO	5.75137  
 13:49 05/21/2021	CO	5.75136   
 13:32 05/21/2021	CO	5.75135    
