--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                           
+5:34 PM 6/30/2021	GL	Enter Transactions - Better handling of reference numbers between Adds
 14:03 06/21/2021	CO	5.75146  
 12:56 06/21/2021	CO	5.75145   
 12:55 PM 6/30/2021	CO	Client behavior improved with regards to SpecialFileFolder  
